# tdd-orchestrator

./: .gitignore  CLAUDE.md  CLAUDE.original.md  README.md  TO-DOS.md  pyproject.toml  tdd-progress.md
.ai/architecture/: ARCHITECTURE.md  DEAD_ENDS.md  DECISIONS_ACTIVE.md  DECISIONS_SUPERSEDED.md  KNOWLEDGE_DEBT.md  WIP.md
.ai/plans/: PLAN_PHASE1_API_LAYER.md
.ai/research/: PLAN_streaming-hints-decomposition-fix.md  _TEMPLATE.md
.claude/: settings.json
.claude/agents/: architect.md  build-error-resolver.md  docs-writer.md  e2e-runner.md  planner.md  python-reviewer.md  refactor-cleaner.md  security-auditor.md
.claude/commands/: cc-handoff.md  cc-ready.md  evaluate.md  quick-test.md  verify-implementation.md
.claude/hooks/: block-secrets.sh  plan_mode_gate.sh  prompt_skill_detector.sh  session_reset.sh  session_type_detector.sh  single_task_clear.sh  single_task_gate.sh  task_stop_check.sh  track_plan_approval.sh
.claude/rules/: dev-patterns.md  security.md  task-execution.md
docs/: ARCHITECTURE.md  PRODUCTION_VISION.md
docs/plans/: PLAN_PHASE1_API_LAYER.md  PLAN_PRODUCTION_ARCHITECTURE.md
docs/specs/: api_layer_spec.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
schema/: schema.sql
scripts/: add_api_prerequisites.py
src/: __init__.py
src/tdd_orchestrator/: __init__.py  __main__.py  ast_checker.py  circuit_breaker.py  circuit_breaker_config.py  cli.py  cli_circuits.py  cli_decompose.py  cli_ingest.py  cli_init.py  cli_init_prd.py  cli_run_prd.py  database.py  (+26 more)
tests/: conftest.py
(+428 files in other folders)
